# tezdhar

./: .gitignore  Makefile.am  Makefile.in  README.md  config.h.in  configure  configure.ac
.github/workflows/: c-cpp.yml  codeql-analysis.yml  codeql.yml
build-aux/m4/: .gitignore
src/: Makefile.am  Makefile.in  bishop.c  bitboard.c  bitboard.h  board.c  chess.c  chess.h  fen.c  king.c  knight.c  parse.c  pawn.c  queen.c  rook.c  ui.c
