# program name
bin_PROGRAMS = tezdhar

# specify which source files get built into an executable
tezdhar_SOURCES = chess.c fen.c ui.c

tezdhar_CFLAGS =	-fdata-sections			\
			-fdelete-null-pointer-checks	\
			-ffunction-sections		\
			-fno-common			\
			-fstack-protector		\
			-fstack-usage 			\
			-Wabi				\
			-Waggregate-return		\
			-Wall 				\
			-Walloca			\
			-Wattributes			\
			-Wbad-function-cast		\
			-Wbuiltin-macro-redefined	\
			-Wc++-compat			\
			-Wc++0x-compat			\
			-Wc++14-compat			\
			-Wcast-qual 			\
			-Wchar-subscripts		\
			-Wconversion			\
			-Wconversion-null		\
			-Wcpp				\
			-Wctor-dtor-privacy		\
			-Wdangling-else			\
			-Wdate-time			\
			-Wdeclaration-after-statement	\
			-Wdelete-incomplete		\
			-Wdelete-non-virtual-dtor	\
			-Wdeprecated			\
			-Wdeprecated-declarations	\
			-Wdisabled-optimization		\
			-Wdiv-by-zero			\
			-Wdouble-promotion 		\
			-Weffc++			\
			-Wendif-labels			\
			-Wextra 			\
			-Wfloat-equal			\
			-Wformat-extra-args		\
			-Wformat-zero-length		\
			-Wformat=2 			\
			-Wignored-qualifiers		\
			-Wincompatible-pointer-types	\
			-Winit-self 			\
			-Winline			\
			-Wint-conversion		\
			-Wint-in-bool-context		\
			-Wint-to-pointer-cast		\
			-Winvalid-offsetof		\
			-Winvalid-pch			\
			-Wmain				\
			-Wmemset-transposed-args	\
			-Wmissing-declarations		\
			-Wmissing-include-dirs		\
			-Wmissing-prototypes		\
			-Wmultichar			\
			-Wnarrowing			\
			-Wnested-externs		\
			-Wnon-virtual-dtor		\
			-Wnull-dereference		\
			-Wodr				\
			-Wold-style-cast 		\
			-Wold-style-definition		\
			-Woverflow			\
			-Woverloaded-virtual 		\
			-Wpacked			\
			-Wpadded			\
			-Wparentheses			\
			-Wpedantic 			\
			-Wpointer-to-int-cast		\
			-Wpragmas			\
			-Wprotocol			\
			-Wredundant-decls 		\
			-Wreorder			\
			-Wreturn-type			\
			-Wselector			\
			-Wsequence-point		\
			-Wshadow 			\
			-Wshift-count-negative		\
			-Wshift-count-overflow		\
			-Wsign-promo 			\
			-Wsizeof-array-argument		\
			-Wstack-protector		\
			-Wstrict-overflow=5 		\
			-Wstrict-prototypes		\
			-Wstrict-selector-match		\
			-Wsuggest-override		\
			-Wswitch-bool			\
			-Wswitch-default 		\
			-Wswitch-enum			\
			-Wsynth				\
			-Wundeclared-selector		\
			-Wundef 			\
			-Wuninitialized			\
			-Wunknown-pragmas		\
			-Wunused-const-variable		\
			-Wunused-macros			\
			-Wvarargs			\
			-Wvla				\
			-Wwrite-strings			\
			-Wzero-as-null-pointer-constant


#AM_LDFLAGS = --gc-sections --print-gc-sections

ACLOCAL_AMFLAGS = -I ./../build-aux/m4
